--- a/templates/template.html
+++ b/templates/template.html
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-    <header class="animate__animated animate__fadeIn" style="position: absolute; width: 100%; height: 60px;">
+    <header style="position: absolute; width: 100%; height: 60px;">
       <div class="container-lg d-flex flex-row justify-content-between align-items-center" style="height: inherit">
-        <h1 style="font-size: 16px; margin: 0px; padding: 0px">The JAWKS-7</h1>
+        <h1 style="font-size: 20px; margin: 0px; padding: 0px">The JAWKS-7</h1>
         
         
       </div>
