--- a/templates/template.html
+++ b/templates/template.html
@@ -12,17 +12,35 @@
 </head>
 <body>
 
-    <header style="position: absolute; width: 100%; height: 60px;">
-      <div class="container-lg d-flex flex-row justify-content-between align-items-center" style="height: inherit">
-        <h1 style="font-size: 20px; margin: 0px; padding: 0px">The JAWKS-7</h1>
-        
-        
-      </div>
-    </header>
-  
-  
-   
-   
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="#"><b>The JAWKS-7</b></a>
+                <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavId">
+
+            <ul class="navbar-nav me-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#" aria-current="page">Trips <span class="visually-hidden">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Friends</a>
+                </li>
+            </ul>
+
+            <button type="button" class="btn btn-info">+ Plan New Trip</button>
+
+            <a href="#">
+                <img src="https://img.icons8.com/small/32/000000/user-male-circle.png"/>
+            </a>
+
+        </div>
+    </nav>
+    
+
+
 
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
