--- a/templates/template.html
+++ b/templates/template.html
@@ -23,22 +23,31 @@
 
             <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                 <li class="nav-item">
+                    <a class="d-sm-none nav-link" href="#"><button type="button" class="btn btn-outline-info">+ Plan New Trip</button></a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link active" href="#" aria-current="page">Trips <span class="visually-hidden">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Friends</a>
                 </li>
+                <li class="nav-item">
+                    <a class="d-sm-none nav-link" href="#">Account</a>
+                </li>
+                
             </ul>
 
-            <button type="button" class="btn btn-info">+ Plan New Trip</button>
+            <button type="button" class="d-none d-sm-block btn btn-info">+ Plan New Trip</button> &nbsp;&nbsp;
+            
 
-            <a href="#">
+            <a class="d-none d-sm-block" href="#">
                 <img src="https://img.icons8.com/small/32/000000/user-male-circle.png"/>
             </a>
 
         </div>
     </nav>
-    
+
+
 
 
 
