--- a/templates/color scheme/color_scheme.html
+++ b/templates/color scheme/color_scheme.html
@@ -5,57 +5,89 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- bootstrap css -->
-    <link href="/css/main.min.css" rel="stylesheet">
-
     <!-- local css -->
     <link rel="stylesheet" href="/templates/template.css">
+
+    <!-- bootstrap css -->
+    <link href="/css/main.min.css" rel="stylesheet">
 
     <title>WAD Travels Project</title>
 </head>
 <body>
-    <h1>Test Bootstrap</h1>
-
-    <hr>
+    <div class="container-fluid bg-light">
+        <div class="row">
+            <h1 class="text-center my-3"><span class="text-primary">Wanderlog</span> Ripoff Style Guide</h1>
+        </div>
+        <hr class="border-top border-bold border-2">
+    </div>
 
     <div class="container-fluid bg-light py-4">
+        <h2>Colors!</h2>
+        <p>Try to use the main background colors (especially bg-light) with light touches of orange (primary) on most cases</p>
+
+        <div class="text-center row d-flex justify-content-center mt-3">
+            <h4>Main Background Colors</h4>
+            <div class="col-2 py-2 bg-light border border-dark border-2"><p>bg-light</p></div>
+            <div class="col-2 py-2 bg-mild"><p>bg-mild</p></div>
+            <div class="col-2 py-2 bg-bold text-light"><p>bg-bold</p></div>
+            <div class="col-2 py-2 bg-dark text-light"><p>bg-dark</p></div>
+        </div>
+        <div class="text-center row d-flex justify-content-center mt-3">
+            <h4>Main Accent Colors</h4>
+            <div class="col-2 py-2 bg-primary"><p>bg-primary</p></div>
+            <div class="col-2 py-2 bg-secondary"><p>bg-secondary</p></div>
+        </div>
+        <div class="text-center row mt-3 d-flex justify-content-center mt-3">
+            <h4>Other Colors</h4>
+            <div class="col-2 py-2 bg-info"><p>bg-info</p></div>
+            <div class="col-2 py-2 bg-success"><p>bg-success</p></div>
+            <div class="col-2 py-2 bg-warning"><p>bg-warning</p></div>
+            <div class="col-2 py-2 bg-danger text-light"><p>bg-danger</p></div>
+        </div>
+
+        <hr class="mt-5">
+    </div>
+
+    <div class="container-fluid bg-light pb-4">
         <h2>Buttons</h2>
+        <p>Use "btn-primary btn-main" for most buttons</p>
 
         <div class="row">
-            <div class="col-sm-3 d-flex justify-content-center">
-                <button class="btn btn-primary m-3 text-light btn-main">Button primary w text-light</button>
+            <h4 class="text-center">Main buttons</h4>
+            <div class="col-sm-4 d-flex justify-content-center">
+                <button class="btn btn-primary m-3 btn-main">btn-primary btn-main</button>
             </div>
-            <div class="col-sm-3 d-flex justify-content-center">
-                <button class="btn btn-secondary m-3">Button secondary</button>
+            <div class="col-sm-4 d-flex justify-content-center">
+                <button class="btn btn-bold m-3">btn-bold</button>
             </div>
-            <div class="col-sm-3 d-flex justify-content-center">
-                <button class="btn btn-success m-3">Button success</button>
+            <div class="col-sm-4 bg-dark d-flex justify-content-center">
+                <button class="btn btn-mild m-3">btn-mild</button>
             </div>
-            <div class="col-sm-3 d-flex justify-content-center">
-                <button class="btn btn-info m-3">Button info</button>
+
+            <h4 class="text-center my-4">Other buttons</h4>
+            <div class="col-sm-4 d-flex justify-content-center">
+                <button class="btn btn-primary m-3">btn-primary</button>
             </div>
-            <div class="col-sm-3 d-flex justify-content-center">
-                <button class="btn btn-warning m-3">Button warning</button>
+            <div class="col-sm-4 d-flex justify-content-center">
+                <button class="btn btn-secondary m-3">btn-secondary</button>
             </div>
-            <div class="col-sm-3 d-flex justify-content-center">
-                <button class="btn btn-danger m-3 text-light">Button danger w text-light</button>
+            <div class="col-sm-4 d-flex justify-content-center">
+                <button class="btn btn-dark m-3">btn-dark</button>
             </div>
-            <div class="col-sm-3 bg-dark d-flex justify-content-center">
-                <button class="btn btn-light m-3">Button light</button>
+            <div class="col-sm-4 d-flex justify-content-center">
+                <button class="btn btn-success m-3">btn-success</button>
             </div>
-            <div class="col-sm-3 d-flex justify-content-center">
-                <button class="btn btn-dark m-3">Button dark</button>
+            <div class="col-sm-4 d-flex justify-content-center">
+                <button class="btn btn-info m-3">btn-info</button>
+            </div>
+            <div class="col-sm-4 d-flex justify-content-center">
+                <button class="btn btn-warning m-3">btn-warning</button>
+            </div>
+            <div class="col-sm-4 d-flex justify-content-center">
+                <button class="btn btn-danger m-3">btn-danger</button>
             </div>
         </div>
     </div>
-
-    <!-- <div class="container-fluid bg-primary">
-        <p>This is color primary</p>
-    </div>
-
-    <div class="container-fluid bg-light">
-        <p>This is color light</p>
-    </div> -->
 
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
