--- a/templates/color scheme/color_scheme.html
+++ b/templates/color scheme/color_scheme.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- local css -->
-    <link rel="stylesheet" href="/templates/template.css">
+    <link rel="stylesheet" href="templates/template.css">
 
     <!-- bootstrap css -->
-    <link href="/css/main.min.css" rel="stylesheet">
+    <link href="css/main.min.css" rel="stylesheet">
 
     <title>WAD Travels Project</title>
 </head>
