--- a/templates/color scheme/color_scheme.html
+++ b/templates/color scheme/color_scheme.html
@@ -29,8 +29,8 @@
             <h4>Main Background Colors</h4>
             <div class="col-2 py-2 bg-light border border-dark border-2"><p>bg-light</p></div>
             <div class="col-2 py-2 bg-mild"><p>bg-mild</p></div>
-            <div class="col-2 py-2 bg-bold text-light"><p>bg-bold</p></div>
-            <div class="col-2 py-2 bg-dark text-light"><p>bg-dark</p></div>
+            <div class="col-2 py-2 bg-bold text-light"><p>bg-bold<br><i>(w text-light)</i></p></div>
+            <div class="col-2 py-2 bg-dark text-light"><p>bg-dark<br><i>(w text-light)</i></p></div>
         </div>
         <div class="text-center row d-flex justify-content-center mt-3">
             <h4>Main Accent Colors</h4>
@@ -42,7 +42,7 @@
             <div class="col-2 py-2 bg-info"><p>bg-info</p></div>
             <div class="col-2 py-2 bg-success"><p>bg-success</p></div>
             <div class="col-2 py-2 bg-warning"><p>bg-warning</p></div>
-            <div class="col-2 py-2 bg-danger text-light"><p>bg-danger</p></div>
+            <div class="col-2 py-2 bg-danger text-light"><p>bg-danger<br><i>(w text-light)</i></p></div>
         </div>
 
         <hr class="mt-5">
