--- a/sass/main.scss
+++ b/sass/main.scss
@@ -28,6 +28,7 @@ $btn-border-radius-lg:        2rem;
 
 // Create your own map
 $custom-colors: (
+  "mild2": #cee1ea,
   "mild": #DFEEF5,
   "bold": #58788C
 );
