--- a/templates/template.css
+++ b/templates/template.css
@@ -4,17 +4,51 @@ button.btn {
     font-weight: 600;
 }
 
-button.btn:hover {
+button.btn-expand:hover, button.btn-main:hover, button.btn-main-bold:hover, button.btn-main-mild:hover {
     padding-left: calc(.75vw + 15px);
     padding-right: calc(.75vw + 15px);
 }
 
 button.btn-main {
+    background-color: #F55B29;
     color: #FFFFFF;
 }
 
-button.btn-main:hover{
-    background-color: #cb481c;
-    border: #cb481c solid 1px;
+button.btn-main:active:focus, button.btn-main:active, button.btn-main:hover {
+    background-color: #cb481c !important;
+    border: #cb481c solid 1px !important;
+    color: #FFFFFF !important;
+}
+
+button.btn-main-bold {
+    background-color: #58788C;
     color: #FFFFFF;
+}
+
+button.btn-main-bold:active:focus, button.btn-main-bold:active, button.btn-main-bold:hover {
+    background-color: #405559 !important;
+    border: #405559 solid 1px !important;
+    color: #FFFFFF !important;
+}
+
+button.btn-main-mild {
+    background-color: #DFEEF5;
+    color: #405559;
+}
+
+button.btn-main-mild:active:focus, button.btn-main-mild:active, button.btn-main-mild:hover {
+    background-color: #c7dbe4 !important;
+    border: #c7dbe4 solid 1px !important;
+    color: #405559 !important;
+}
+
+button.btn-fade {
+    background-color: #DFEEF5;
+    color: #71888c;
+}
+
+button.btn-fade:focus, button.btn-fade:active, button.btn-fade:hover {
+    background-color: #bcd0d8 !important;
+    border: #bcd0d8 solid 1px !important;
+    color: #405559 !important;
 }
