--- a/templates/color scheme/color_scheme.html
+++ b/templates/color scheme/color_scheme.html
@@ -57,8 +57,8 @@
     <!-- buttons -->
     <div class="container-fluid bg-light pb-4">
         <h2>Buttons</h2>
-        <p>Visual hierarchy:<br>1) btn-main<br>2) btn-main-bold & btn-main-mild<br>3) btn-fade</p>
-
+        <p>Visual hierarchy: <b>1)</b> btn-main <b>2)</b> btn-main-bold & btn-main-mild <b>3)</b> btn-fade</p>
+        
         <div class="row">
             <h4 class="text-center">Main buttons</h4>
             <div class="col-sm-4 d-flex justify-content-center">
@@ -75,11 +75,12 @@
             </div>
             
             <h4 class="text-center my-4">Other buttons</h4>
+            <p class="text-center">Use <b>btn-expand</b> to add expandable effect on hover (not necessary for btn-main classes)</p>
             <div class="col-sm-4 d-flex justify-content-center">
-                <button class="btn btn-primary m-3">btn-primary</button>
+                <button class="btn btn-primary m-3 text-light">btn-primary text-light</button>
             </div>
             <div class="col-sm-4 d-flex justify-content-center">
-                <button class="btn btn-bold m-3">btn-bold</button>
+                <button class="btn btn-bold m-3 btn-expand">btn-bold btn-expand</button>
             </div>
             <div class="col-sm-4 bg-dark d-flex justify-content-center">
                 <button class="btn btn-mild m-3">btn-mild</button>
