--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../template.css">
 
     <!-- bootstrap css -->
-    <link href="../../css/main.min.css" rel="stylesheet">
+    <link href="/css/main.min.css" rel="stylesheet">
 
     <title>WAD Travels Project</title>
 </head>
