Added css import statements to all html files, added new -fixed button classes, change icon to font-icon import
1) Added css import statements to all html files + Added font awesome import statement to all html files too
- All html pages not use the same CSS stylings & have access to font awesome library

2) Added new -fixed button classes
- 3 new button classes (same styling, but without expansion on hover)

3) Changed icon to font-icon import
- Tried using font awesome to get the user icon on the homepage

--- a/templates/color scheme/color_scheme.html
+++ b/templates/color scheme/color_scheme.html
@@ -11,6 +11,9 @@
     <!-- bootstrap css -->
     <link href="../../css/main.min.css" rel="stylesheet">
 
+    <!-- Font Awesome CSS -->
+    <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
+
     <title>WAD Travels Project</title>
 </head>
 <body>
@@ -65,10 +68,19 @@
                 <button class="btn m-3 btn-main">btn-main</button>
             </div>
             <div class="col-sm-4 d-flex justify-content-center">
+                <button class="btn m-3 btn-main-fixed">btn-main-fixed</button>
+            </div>
+            <div class="col-sm-4 d-flex justify-content-center">
                 <button class="btn btn-main-bold m-3">btn-main-bold</button>
+            </div>
+            <div class="col-sm-4 d-flex justify-content-center">
+                <button class="btn btn-main-bold-fixed m-3">btn-main-bold-fixed</button>
             </div>
             <div class="col-sm-4 bg-dark d-flex justify-content-center">
                 <button class="btn btn-main-mild m-3">btn-main-mild</button>
+            </div>
+            <div class="col-sm-4 bg-dark d-flex justify-content-center">
+                <button class="btn btn-main-mild-fixed m-3">btn-main-mild-fixed</button>
             </div>
             <div class="col-sm-4 d-flex justify-content-center">
                 <button class="btn btn-fade m-3">btn-fade</button>
