--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- local css -->
+    <link rel="stylesheet" href="template.css">
+
     <!-- bootstrap css -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link href="../css/main.min.css" rel="stylesheet">
+
+    <!-- Font Awesome CSS -->
+    <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
 
     <title>WAD Travels Project</title>
 </head>
@@ -23,7 +29,7 @@
 
             <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="d-sm-none nav-link" href="#"><button type="button" class="btn btn-outline-info">+ Plan New Trip</button></a>
+                    <a class="d-sm-none nav-link" href="#"><button type="button" class="btn btn-main-fixed">+ Plan New Trip</button></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="#" aria-current="page">Trips <span class="visually-hidden">(current)</span></a>
@@ -33,15 +39,19 @@
                 </li>
                 <li class="nav-item">
                     <a class="d-sm-none nav-link" href="#">Account</a>
-                </li>
-                
+                </li> 
             </ul>
 
-            <button type="button" class="d-none d-sm-block btn btn-info">+ Plan New Trip</button> &nbsp;&nbsp;
+            <div style="width: calc(8vw + 150px)" class="d-flex justify-content-center">
+                <button type="button" class="d-none d-sm-block btn btn-main mx-3">+ Plan New Trip</button>
+            </div>
             
+            <!-- <a class="d-none d-sm-block" href="#">
+                <img width="40px" src="https://img.icons8.com/ios-filled/100/000000/user-male-circle.png"/>
+            </a> -->
 
             <a class="d-none d-sm-block" href="#">
-                <img src="https://img.icons8.com/small/32/000000/user-male-circle.png"/>
+                <i class="fa-solid fa-circle-user fa-2xl text-dark"></i>
             </a>
 
         </div>
