Minor text edit on styling page

--- a/templates/styling/styling.html
+++ b/templates/styling/styling.html
@@ -132,7 +132,7 @@
 
         <p>Remember to click the <span class="text-primary" style="font-weight: bold;"><i class="fa-solid fa-bolt"></i>Free</span> button (paid ones don't work)</p>
 
-        <p>Copy the HMTL code snippet: (eg. '<span class="text-primary" style="font-weight: bold;">&lt;i class="fa-solid fa-download"&gt;&lt;/i&gt;</span>')</p>
+        <p>Copy the HMTL code snippet: (eg. '<span class="text-primary" style="font-weight: bold;">&lt;i class="fa-solid fa-circle-user"&gt;&lt;/i&gt;</span>')</p>
 
         <div class="row text-dark">
             <div class="col-sm-2 col-4 d-flex align-items-center text-center my-5 flex-column">
