--- a/templates/styling/styling.html
+++ b/templates/styling/styling.html
@@ -132,7 +132,9 @@
 
         <p>Remember to click the <span class="text-primary" style="font-weight: bold;"><i class="fa-solid fa-bolt"></i>Free</span> button (paid ones don't work)</p>
 
-        <p>Copy the HMTL code snippet: (eg. '<span class="text-primary" style="font-weight: bold;">&lt;i class="fa-solid fa-circle-user"&gt;&lt;/i&gt;</span>')</p>
+        <p>Copy the HMTL code snippet and paste in HTML document: (eg. '<span class="text-primary" style="font-weight: bold;">&lt;i class="fa-solid fa-circle-user"&gt;&lt;/i&gt;</span>')</p>
+
+        <p class="mt-5">Remember to insert the following Font Awesome import tag in the head of the HTML document:<br><span class="text-primary">&lt;script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"&gt;&lt;/script&gt;</span></p>
 
         <div class="row text-dark">
             <div class="col-sm-2 col-4 d-flex align-items-center text-center my-5 flex-column">
@@ -203,7 +205,7 @@
 
         <h3 class="text-center">Sizes</h3>
         <p class="text-center">To change sizes, apply "fa-<span class="text-primary">(size option)</span>" class.</p>
-        <p class="text-center">Go to <a href="https://fontawesome.com/docs/web/style/size" target="_blank" class="text-primary" style="font-weight: bold;">https://fontawesome.com/docs/web/style/size</a> to see all available sizes</p>
+        <p class="text-center">Go to <a style="font-weight: bold;" href="https://fontawesome.com/docs/web/style/size" target="_blank">https://fontawesome.com/docs/web/style/size</a> to see all available sizes</p>
 
         <div class="row text-dark">
             <div class="col-sm-2 col-4 d-flex align-items-center text-center my-5 flex-column">
