--- a/templates/styling/styling.html
+++ b/templates/styling/styling.html
@@ -11,9 +11,6 @@
     <!-- bootstrap css -->
     <link href="../../css/main.min.css" rel="stylesheet">
 
-    <!-- Font Awesome CSS -->
-    <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
-
     <title>WAD Travels Project</title>
 </head>
 
@@ -134,7 +131,7 @@
 
         <p>Copy the HMTL code snippet and paste in HTML document: (eg. '<span class="text-primary" style="font-weight: bold;">&lt;i class="fa-solid fa-circle-user"&gt;&lt;/i&gt;</span>')</p>
 
-        <p class="mt-5">Remember to insert the following Font Awesome import tag in the head of the HTML document:<br><span class="text-primary">&lt;script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"&gt;&lt;/script&gt;</span></p>
+        <p class="mt-5">Remember to insert the following Font Awesome import JS tag at the bottom of the HTML body:<br><span class="text-primary">&lt;script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"&gt;&lt;/script&gt;</span></p>
 
         <div class="row text-dark">
             <div class="col-sm-2 col-4 d-flex align-items-center text-center my-5 flex-column">
@@ -242,6 +239,11 @@
     </div>
 
     <div class="border-top border-mild-2 border-3 my-4"></div>
+
+
+    <!-- START OF JS IMPORTS (DO NOT ADD ANYTHING BELOW THIS LINE!) ---------------------------------------------------------------------------------------------- -->
+    <!-- Font Awesome JS -->
+    <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
 
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
