--- a/templates/template.html
+++ b/templates/template.html
@@ -11,8 +11,8 @@
     <!-- bootstrap css -->
     <link href="../css/main.min.css" rel="stylesheet">
 
-    <!-- Font Awesome CSS -->
-    <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
+    <!-- Flatpickr CSS-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
     <title>WAD Travels Project</title>
 </head>
@@ -58,7 +58,72 @@
         </div>
     </nav>
 
+    <!-- datetime input format -->
+    <div class="container-fluid my-5">
+        <div class="row text-center">
+            <h4>DateTime & Date Picker:</h4>
+            <p>Uses Flatpickr to display (Remember to import Flatpickr CSS and JS & paste config settings)</p>
+            <p><a href="https://flatpickr.js.org/getting-started/#:~:text=Non%2Dmodule%20environments" target="_blank" style="font-weight: bold;">Click Here</a> to copy import statements</p>
+        </div>
+
+        <div class="row justify-content-evenly my-3">
+            <div class="col-sm-4">
+                <!-- DATE & TIME SELECTOR ------------------------------------------------------------ -->
+                <input type="datetime-local" placeholder="Select Date & Time" id="datetime_test">
+            </div>
+            <div class="col-sm-4">
+                <!-- DATE ONLY SELECTOR -------------------------------------------------------------- -->
+                <input type="date" placeholder="Select Date" id="date_test">
+            </div>
+        </div>    
+        
+        <div class="row justify-content-evenly">
+            <div class="col-sm-4 d-flex justify-content-center">
+                <button onclick="get_val()" class="btn btn-main-bold">Click Me to console.log the DateTime</button>
+            </div>
+            <div class="col-sm-4 d-flex justify-content-center">
+                <button onclick="get_date()" class="btn btn-main-bold">Click Me to console.log the Date</button>
+            </div>
+        </div>
+    </div>
+
+
+    <script>
+        function get_val() {
+            console.log(document.getElementById("datetime_test").value)
+        }
+
+        function get_date() {
+            console.log(document.getElementById("date_test").value)
+        }
+    </script>
+
+
+    <!-- START OF JS IMPORTS (DO NOT ADD ANYTHING BELOW THIS LINE!) ---------------------------------------------------------------------------------------------- -->
+    <!-- Font Awesome JS -->
+    <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
+
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+
+    <!-- Flatpickr JS -->
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
+    <!-- Flatpickr Config JS (Must come after Flatpickr JS import statement) -->
+    <script>
+        // datetime
+        flatpickr("input[type=datetime-local]", {
+            enableTime: true,
+            dateFormat: "Y-m-d H:i",
+            altInput: true,
+            altFormat: "J F y (h:i K)"
+        });
+
+        // date only
+        flatpickr("input[type=date]", {
+            altInput: true,
+            altFormat: "J F Y"
+        })
+    </script>
 </body>
 </html>
