--- a/templates/create_activities/create_activities.html
+++ b/templates/create_activities/create_activities.html
@@ -12,10 +12,11 @@
         <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
         <!-- CSS  -->
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../template.css">
     </head>
 
     <body>
-        <div class="container border border-5">
+        <div class="container text-dark">
             <h3 class="heading">Create an Activity</h3>
             <form>
                 <!-- PLACE  -->
@@ -115,8 +116,8 @@
 
                 <!-- BACK & CREATE ACTIVITY BUTTON  -->
                 <div class="buttons">
-                    <button type="button" class="btn back_button btn-primary" data-bs-toggle="modal" data-bs-target="#back_button_modal">Back</button>
-                    <button class="btn create_button btn-primary">Create</button>
+                    <button type="button" class="btn back_button btn-main-bold-fixed" data-bs-toggle="modal" data-bs-target="#back_button_modal">Back</button>
+                    <button class="btn create_button btn-main-fixed">Create</button>
                     
                     
   
@@ -132,8 +133,8 @@
                             Are you sure you want to leave this page? Any unsaved changes will be lost. 
                             </div>
                             <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Confirm</button>
+                            <button type="button" class="btn btn-main-bold-fixed" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-main-fixed">Confirm</button>
                             </div>
                         </div>
                         </div>
