edit create/edit activities template

--- a/templates/edit_activity/edit_activity.html
+++ b/templates/edit_activity/edit_activity.html
@@ -110,8 +110,10 @@
 
                 <!-- ATTACHMENTS  -->
                 <div class="form-floating mb-5">
-                <p>Add attachments:</p>
-                <input type="file" id="myfile" name="myfile" multiple>
+                    <div class="input-group mb-3" style="width: 50%;">
+                        <label class="input-group-text" for="inputGroupFile01">Add Attachment</label>
+                        <input type="file" class="form-control" id="inputGroupFile01">
+                    </div>
                 </div>
 
                 <!-- DELETE AND CONFIRM ACTIVITY BUTTON  -->
