--- a/templates/create_activities/create_activities.html
+++ b/templates/create_activities/create_activities.html
@@ -110,9 +110,10 @@
 
                 <!-- ATTACHMENTS  -->
                 <div class="form-floating mb-5">
-                <p>Add attachments:</p>
-                <input type="file" id="myfile" name="myfile" multiple>
-                </div>
+                    <div class="input-group mb-3" style="width: 50%;">
+                        <label class="input-group-text" for="inputGroupFile01">Add Attachment</label>
+                        <input type="file" class="form-control" id="inputGroupFile01">
+                    </div>
 
                 <!-- BACK & CREATE ACTIVITY BUTTON  -->
                 <div class="buttons">
