collapsible card template

--- a/templates/activity_card_listview/activity_card.html
+++ b/templates/activity_card_listview/activity_card.html
@@ -14,7 +14,7 @@
 </head>
 <!-- ACTIVITY CARD -->
 <body>
-    <h1 class="m-5">VIEW WITH 60%+- WINDOW</h1>
+    <h1 class="m-5">VIEW IN 60%+- WINDOW</h1>
     <h1 class="m-5">CARD SAMPLE 1</h1>
     
     <!-- COPY FROM HERE -->
@@ -74,7 +74,7 @@
             <div class="row">
                 <div class = "col-8">
                     <span class="badge rounded-pill text-bg-warning mb-3">#Shopping</span>
-                    <h6>$100/person</h6>
+                    <h6>100 SGD/per person</h6>
                     <p class="description" style="text-align: justify;">Description included by user.     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod consequuntur, provident magnam nobis quis autem odit, nulla inventore cumque repudiandae facere. Nisi, itaque! Odit eos libero dolorem, reprehenderit dicta illo!</p>
                 </div>
                 
