--- a/templates/edit_activity/edit_activity.html
+++ b/templates/edit_activity/edit_activity.html
@@ -123,7 +123,7 @@
                     
                     
   
-                    <!-- Back Button Modal -->
+                    <!-- Delete Button Modal -->
                     <div class="modal fade" id="del_button_modal" tabindex="-1" aria-labelledby="del_button_modal_label1" aria-hidden="true">
                         <div class="modal-dialog">
                         <div class="modal-content">
