--- a/templates/create_activities/create_activities.html
+++ b/templates/create_activities/create_activities.html
@@ -13,6 +13,8 @@
         <!-- CSS  -->
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="../template.css">
+
+        <!-- NEW EDIT ADAM -->
     </head>
 
     <body>
