--- a/templates/date_time/date_time.html
+++ b/templates/date_time/date_time.html
@@ -52,7 +52,7 @@
 
     <hr class="mt-5">
     <!-- flight add form -->
-    <div class="container text-dark bg-mild rounded-4 py-3" id="datetime_app">
+    <div class="container-md text-dark bg-mild rounded-4 py-3 position-relative" id="datetime_app">
         <form action="#">
             <!-- flight title -->
             <div class="row justify-content-center text-center">
@@ -173,14 +173,24 @@
                 </div> -->
             
             </div>
+            
+            <div class="col-3">
+                <button class="btn btn-mild2 my-2 ms-md-5" type="button" data-bs-toggle="collapse" data-bs-target="#flightX_dropdown" aria-expanded="false" aria-controls="flightX_dropdown" @click="toggle_dropdown()">
+                    <i v-if="!dropdown_open" class="fa-solid fa-chevron-down fa-sm"></i>
+                    <i v-if="dropdown_open" class="fa-solid fa-chevron-up fa-sm"></i>
+                </button>
+            </div>
 
+            <!-- <div class="row justify-content-center">
+
+                <div class="col-3 d-flex justify-content-center align-items-center bg-dark">
+                    <button class="btn btn-main">Save</button>
+                </div>
+            </div> -->
+
+            
             <!-- collapsable -->
-            <button class="btn btn-mild2 my-2" type="button" data-bs-toggle="collapse" data-bs-target="#flightX_dropdown" aria-expanded="false" aria-controls="flightX_dropdown" @click="toggle_dropdown()">
-                <i v-if="!dropdown_open" class="fa-solid fa-chevron-down fa-sm"></i>
-                <i v-if="dropdown_open" class="fa-solid fa-chevron-up fa-sm"></i>
-            </button>
-
-            <div class="collapse" id="flightX_dropdown">
+            <div class="collapse mx-md-5 pb-5" id="flightX_dropdown">
                 <hr class="bg-dark">
                 <div class="row g-3 mt-2">
                     <div class="col-md-4 col-sm-6">
@@ -218,14 +228,23 @@
                             <label for="flightX_gate">Gate</label>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-6">
+                </div>
+                <div class="row mt-4">
+                    <div class="col-lg-6">
                         <!-- attachments -->
-                        <div class="form-floating mb-5">
-                            <p>Add attachments:</p>
-                            <input type="file" id="myfile" name="myfile" multiple>
+                        <div class="form-floating">
+                            <div class="input-group mb-3">
+                                <label class="input-group-text text-light bg-bold fw-semibold" for="inputGroupFile01">Add Attachment</label>
+                                <input type="file" class="form-control" id="inputGroupFile01">
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="save-btn-div-flight-page">
+                <button type="button" class="btn btn-fade me-3">Delete</button>
+                <button type="button" class="btn btn-main-fixed">Save</button>
             </div>
 
         </form>
