--- a/templates/template.css
+++ b/templates/template.css
@@ -55,3 +55,12 @@ button.btn-fade:focus, button.btn-fade:active, button.btn-fade:hover {
     border: #bcd0d8 solid 1px !important;
     color: #405559 !important;
 }
+
+.save-btn-div-flight-page{
+    position: absolute;
+    bottom: 20px;
+    right: 60px;
+    width: 10vw;
+    display: flex;
+    justify-content: center;
+}
