--- a/templates/create_activities/create_activities.html
+++ b/templates/create_activities/create_activities.html
@@ -16,6 +16,7 @@
     </head>
 
     <body>
+        <h1>Hello Adam</h1>
         <div class="container text-dark">
             <h3 class="heading">Create an Activity</h3>
             <form>
