--- a/templates/create_activities/create_activities.html
+++ b/templates/create_activities/create_activities.html
@@ -13,11 +13,11 @@
         <!-- CSS  -->
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="../template.css">
-
-        <!-- NEW EDIT ADAM -->
     </head>
 
     <body>
+        <div><h1>TEST PUSH</h1></div>
+
         <div class="container text-dark">
             <h3 class="heading">Create an Activity</h3>
             <form>
