--- a/templates/pages/homepage.html
+++ b/templates/pages/homepage.html
@@ -50,9 +50,9 @@
     <div class="p-3 row d-flex flex-wrap justify-content-center">
         
         <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/seoul.jpg" class="card-img-top" height="200px">
             <div class="card-body">
-              <h5 class="card-title">Dec22 Australia</h5>
+              <h5 class="card-title">Dec22 Seoul Trip!</h5>
               <a href="#" class="btn btn-success">Edit Trip</a>
             </div>
             <div class="card-footer text-muted">
@@ -61,9 +61,9 @@
           </div>
 
           <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/NYC.jpg" class="card-img-top" height="200px">
             <div class="card-body">
-              <h5 class="card-title">June23 Seoul</h5>
+              <h5 class="card-title">June23 New York City</h5>
               <a href="#" class="btn btn-success">Edit Trip</a>
             </div>
             <div class="card-footer text-muted">
@@ -72,9 +72,9 @@
           </div>
 
           <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/interlaken.jpg" class="card-img-top" height="200px">
             <div class="card-body">
-              <h5 class="card-title">June19 Paris Trip</h5>
+              <h5 class="card-title">June19 Interlaken</h5>
               <a href="#" class="btn btn-warning">View Trip</a>
             </div>
             <div class="card-footer text-muted">
