--- a/templates/pages/homepage.html
+++ b/templates/pages/homepage.html
@@ -9,6 +9,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
     <title>WAD Travels Project</title>
+
+    <style>
+        .disbtn {
+          background-color: #8b81ff;
+          opacity: 0.6;
+          transition: 0.3s;
+        }
+        
+        .disbtn:hover {opacity: 1}
+    </style>
 </head>
 <body>
 
@@ -53,7 +63,7 @@
             <img src="images/seoul.jpg" class="card-img-top" height="200px">
             <div class="card-body">
               <h5 class="card-title">Dec22 Seoul Trip!</h5>
-              <a href="#" class="btn btn-success">Edit Trip</a>
+              <a href="#" class="btn btn-primary">Edit Trip</a>
             </div>
             <div class="card-footer text-muted">
               Last edited: 2 days ago
@@ -64,7 +74,7 @@
             <img src="images/NYC.jpg" class="card-img-top" height="200px">
             <div class="card-body">
               <h5 class="card-title">June23 New York City</h5>
-              <a href="#" class="btn btn-success">Edit Trip</a>
+              <a href="#" class="btn btn-primary">Edit Trip</a>
             </div>
             <div class="card-footer text-muted">
                 Last edited: 3 weeks ago
@@ -75,7 +85,7 @@
             <img src="images/interlaken.jpg" class="card-img-top" height="200px">
             <div class="card-body">
               <h5 class="card-title">June19 Interlaken</h5>
-              <a href="#" class="btn btn-warning">View Trip</a>
+              <a href="#" class="btn disbtn btn-primary">View Trip</a>
             </div>
             <div class="card-footer text-muted">
                 Last edited: 3 years ago
